--- a/css/_layer.scss
+++ b/css/_layer.scss
@@ -49,12 +49,27 @@ body {
   @media (max-width: 1600px) {
     font-size: 20px;
   }
+  @media (max-width: 1400px) {
+    font-size: 16px;
+  }
+  @media (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 .container {
   max-width: 1920px;
   padding: 0 110px;
   @media (max-width: 1600px) {
     padding: 0 80px;
+  }
+  @media (max-width: 1400px) {
+    padding: 0 60px;
+  }
+  @media (max-width: 1023px) {
+    padding: 0 40px;
+  }
+  @media (max-width: 767px) {
+    padding: 0 24px;
   }
 }
 
@@ -87,13 +102,74 @@ footer {
   background-size: cover;
   background-position: top left;
   font-size: 24px;
+  @media (max-width: 767px) {
+    padding: 40px 0;
+    background-position: center;
+    font-size: 14px;
+  }
 }
-
+.fter-top {
+  @media (max-width: 1700px) {
+    font-size: 20px;
+  }
+  @media (max-width: 1400px) {
+    font-size: 16px;
+  }
+  @media (max-width: 767px) {
+    font-size: 14px;
+  }
+  .row {
+    >div {
+      @media (max-width: 767px) {
+        margin-bottom: 30px;
+        &:first-child {
+          order: 2;
+        }
+        &:nth-child(2) {
+          order: 3;
+          margin-bottom: 0;
+        }
+        &:last-child {
+          order: 1;
+        }
+      }
+    }
+  }
+  .link-fter {
+    @media (max-width: 767px) {
+      ul {
+        display: block;
+        text-align: left;
+        padding: 16px 0 0 0;
+        li {
+          padding: 0;
+          margin: 0 0 10px 0;
+          &:last-child {
+            margin: 0;
+          }
+          &:After {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
 .item-fter {
   .title-fter {
     font-size: 27px;
     font-weight: bold;
     margin-bottom: 30px;
+    @media (max-width: 1600px) {
+      font-size: 24px;
+    }
+    @media (max-width: 1400px) {
+      font-size: 22px;
+    }
+    @media (max-width: 767px) {
+      font-size: 18px;
+      margin-bottom: 16px;
+    }
   }
   ul  {
     list-style: none;
@@ -111,6 +187,14 @@ footer {
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
+  @media (max-width: 767px) {
+    text-align: left;
+    .logo {
+      img {
+        max-height: 26px;
+      }
+    }
+  }
   ul {
     list-style: none;
     display: flex;
@@ -139,11 +223,32 @@ footer {
 
 .fter-bot {
   margin-top: 100px;
+  @media (max-width: 1700px) {
+    font-size: 20px;
+  }
+  @media (max-width: 1400px) {
+    font-size: 16px;
+  }
+  @media (max-width: 767px) {
+    font-size: 14px;
+    margin-top: 30px;
+  }
+  .col-md-6 {
+    @media (max-width: 767px) {
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
   ul {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    @media (max-width: 767px) {
+      justify-content: center;
+    }
     li {
       margin-right: 25px;
       &:last-child {
@@ -161,6 +266,9 @@ footer {
       position: relative;
       top: 3px;
       margin-left: 20px;
+      @media (max-width: 1400px) {
+        top: 0;
+      }
     }
   }
 }
